# network-manager-vpn-plugin

./: .gitignore  .golangci.yml  .goreleaser.yml  CONTRIBUTING.md  README.md  Taskfile.yml  go.mod  go.sum  meson.build  meson_options.txt  release_config_test.go
.github/: pull_request_template.md
.github/workflows/: release.yml
cmd/nm-netbird-auth-dialog/: main.go
cmd/nm-netbird-service/: main.go
docs/: architecture.md  d-bus-security-model.md  reference.md
docs/improvements/: install-ux.md
internal/envconfig/: envconfig.go
internal/initsystem/: initsystem.go  initsystem_test.go
internal/netbird/daemonclient/: grpc.go  grpc_test.go  types.go
internal/netbird/daemonproto/: README.md  daemon.pb.go  daemon.proto  daemon_grpc.pb.go
internal/netbird/profile/: profile.go  profile_test.go
internal/netbird/status/: status.go  status_test.go
internal/nmauthdialog/: dialog.go  dialog_test.go
internal/nmplugin/: config.go  errors.go  helpers.go  introspection.go  options_test.go  prompts.go  properties.go  service.go  service_test.go  settings.go  settings_test.go  types.go
opengrep/: pragmatic-go.yml
packaging/NetworkManager/VPN/: nm-netbird-service.name
packaging/NetworkManager/conf.d/: 90-netbird-unmanaged.conf
packaging/dbus-1/system.d/: nm-netbird-service.conf
packaging/rpm/: network-manager-netbird.spec.tmpl
packaging/scripts/: postinstall.sh  postremove.sh
packaging/selinux/: Makefile  nm_netbird.fc  nm_netbird.te
properties/: meson.build  nm-netbird-editor-model-test.c  nm-netbird-editor-model.c  nm-netbird-editor-model.h  nm-netbird-editor-plugin-test.c  nm-netbird-editor-plugin.c  nm-netbird-editor.c  nm-netbird-editor.h
scripts/: build-fedora-selinux-policy.sh  build-release-properties.sh  install-hooks.sh  install-release.sh  quickstart.sh  uninstall-release.sh  verify-rpm-signatures.sh
scripts/hooks/: pre-commit
